add: logo-iniziale

--- a/index.html
+++ b/index.html
@@ -4,8 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>The Booleaner</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
+<!-- Logo iniziale-->
+<header>
+    <img id="logo" src="img/logo.svg" alt="">
+</header>
+
+<main>
+    <article>
+        <h1>Internet deve essere al servizio del "bene pubblico" : il manifesto di Tim Berners-Lee</h1>
+        <div class="bot"> Scritto da The Booleaner</div>
+        <div class="bot">il 10/10/2020</div>
+
+    </article>
+
+
+</main>
+
+<footer></footer>
 
 <body>
 
