--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
 </head>
 <!-- Logo iniziale-->
 <header>
-    <img id="logo" src="img/logo.svg" alt="">
+    <img id="logo" src="img/logo.svg" alt="logo iniziale">
 </header>
 
 <main>
-    <article>
-        <h1>Internet deve essere al servizio del "bene pubblico" : il manifesto di Tim Berners-Lee</h1>
-        <div class="bot"> Scritto da The Booleaner</div>
-        <div class="bot">il 10/10/2020</div>
+    <h1>Internet deve essere al servizio del "bene pubblico" : il manifesto di Tim Berners-Lee</h1>
+    <div class="bot"> Scritto da <span>The Booleaner</span></div>
+    <div class="bot">il 10/10/2020</div>
 
-    </article>
+    <img class="foto" src="img/tim-1.jpg" alt="Tim Berners-Lee">
+    <img class="foto" src="img/tim-2.jpg" alt="Tim Berners-Lee">
+
+
 
 
 </main>
