--- a/index.html
+++ b/index.html
@@ -7,27 +7,109 @@
     <title>The Booleaner</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<!-- Logo iniziale-->
-<header>
-    <img id="logo" src="img/logo.svg" alt="logo iniziale">
-</header>
-
-<main>
-    <h1>Internet deve essere al servizio del "bene pubblico" : il manifesto di Tim Berners-Lee</h1>
-    <div class="bot"> Scritto da <span>The Booleaner</span></div>
-    <div class="bot">il 10/10/2020</div>
-
-    <img class="foto" src="img/tim-1.jpg" alt="Tim Berners-Lee">
-    <img class="foto" src="img/tim-2.jpg" alt="Tim Berners-Lee">
-
-
-
-
-</main>
-
-<footer></footer>
 
 <body>
+
+
+    <!-- Logo iniziale-->
+    <header>
+        <img id="logo" src="img/logo.svg" alt="logo iniziale">
+    </header>
+    <!--Titolo e data-->
+    <main>
+        <h1>Internet deve essere al servizio del "bene pubblico" : il manifesto di Tim Berners-Lee</h1>
+        <div id="bot"> Scritto da <span>The Booleaner</span><br>il 10/10/2020</div>
+        <!-- Foto-->
+        <img class="foto" src="img/tim-1.jpg" alt="Tim Berners-Lee">
+        <img class="foto" src="img/tim-2.jpg" alt="Tim Berners-Lee">
+
+        <div>1st Photo: John S. and James L. Knight Foundation, by Scott Hentichsen <br>2nd Photo : Wikimedia,
+            by Paul Clarke
+        </div>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur nam ut ipsum, veniam eos eaque saepe
+            blanditiis porro quisquam, illum mollitia omnis perferendis sit! Quidem neque laudantium porro
+            exercitationem
+            atque. span <span id="border">Lorem ipsum dolor sit, amet consectetur adipisicing elit.</span> Mollitia,
+            atque
+            corporis doloremque eum nemo
+            deserunt sint recusandae tenetur repellendus dolorem dolores maxime sit blanditiis alias distinctio
+            perferendis
+            id totam commodi!
+        </p>
+
+        <ul>
+            <li class="list">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum possimus enim ipsa culpa
+                quibusdam repudiandae
+                totam quaerat voluptates assumenda autem! Dolorum animi sint, necessitatibus est commodi illum
+                blanditiis
+                veniam ullam.
+            </li class="list">
+            <li class="list">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cupiditate labore distinctio
+                officiis amet
+                iusto officia, nisi provident beatae ex, voluptas laboriosam perspiciatis esse ut molestiae facilis.
+                Non,
+                iste eaque.
+            </li class="list">
+            <li class="list">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam expedita assumenda commodi
+                soluta incidunt,
+                labore molestiae, exercitationem atque neque ipsum nam quasi nesciunt, delectus nostrum excepturi ea
+                minus
+                voluptate officiis.
+            </li class="list">
+
+
+        </ul>
+    </main>
+
+    <footer>
+        <!--tabella-->
+        <table>
+            <thead>
+                <tr>
+                    <th>Lorem ispum dolor</th>
+                    <th>Lorem ispum dolor</th>
+                    <th>Lorem ispum dolor</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="cella-1">Lorem ipsum dolor</td>
+                    <td class="cella-1">Lorem ispusm dolor</td>
+                    <td class="cella-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe molestiae fuga
+                        repellendus. Expedita
+                        deleniti quibusdam, quaerat tempore blanditiis eaque saepe aut error, nesciunt id, fugit
+                        accusamus
+                        excepturi temporibus praesentium totam!
+                    </td>
+                </tr>
+                <tr>
+                    <td class="cella-2">Lorem ipsum dolor</td>
+                    <td class="cella-2">Lorem ispusm dolor</td>
+                    <td class="cella-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe molestiae fuga
+                        repellendus. Expedita
+                        deleniti quibusdam, quaerat tempore blanditiis eaque saepe aut error, nesciunt id, fugit
+                        accusamus
+                        excepturi temporibus praesentium totam!
+                    </td>
+                </tr>
+                <tr>
+                    <td class="cella-1">Lorem ipsum dolor</td>
+                    <td class="cella-1">Lorem ispusm dolor</td>
+                    <td class="cella-1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe molestiae fuga
+                        repellendus. Expedita
+                        deleniti quibusdam, quaerat tempore blanditiis eaque saepe aut error, nesciunt id, fugit
+                        accusamus
+                        excepturi temporibus praesentium totam!
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        <div id="Copyright">
+
+            <h4>Copyright The Booleaner- Tutti i diritti riservati</h4>
+        </div>
+    </footer>
 
 </body>
 
